# Jerry

./: README.md  so_make_macOS.sh  test.ipynb  wheel_make.sh
.github/workflows/: Mac.yml  mac.yml  win_and_lin.yml
asd/: setup.py
asd/src/: kruskal.cpp
jerry/: CMakeLists.txt  README.md  mac_setup.py  pyproject.toml  setup.py  wheel_make.sh
jerry/jerry.egg-info/: PKG-INFO  SOURCES.txt
jerry/jerrymander.egg-info/: SOURCES.txt
